mainting required dependecies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 requests
 python-dotenv
 newsdataapi
-requests
-python-dotenv
-newsdataapi
-agno 
-openai
 streamlit
+agno
+openai
+anthropic
+google-genai
+
